# MCP-A2A

./: main.py  pyproject.toml
1-Foundation-AgenticAI/: 1_First_workflow.ipynb  2_Design_Pattern.ipynb  3_Comparing Multiple LLMs .ipynb  4_Resources_vs_tools.ipynb  5_chatbot.ipynb  6_pydantic.ipynb  7_Multi_LL_Model.ipynb
2-Intelligent_Agents/: 1-Push_Notifications_LLM.ipynb  2-sales_outreach.ipynb
3-super-agent/: 2_DesignEndToEndRsearchPipelines.ipynb  3_BioTech_search-agent.ipynb  web-searh-agent.ipynb
4-LangGraph-Agentic/: 1_Smarter_AI_with_Langgraph.ipynb  Langgraph_chatbot.ipynb  Langgraph_miniflow.ipynb
Resources/: Summary.txt
