[project]
name = "mcp-a2a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.3.0",
    "ipykernel>=7.1.0",
    "mcp[cli]>=1.25.0",
    "openai>=2.15.0",
    "pypdf>=6.6.0",
    "requests>=2.32.5",
    "tensorflow>=2.20.0",
]
