[project]
name = "mcp-a2a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agents>=1.4.0",
    "dataclasses>=0.8",
    "email-validator>=2.3.0",
    "gradio>=6.3.0",
    "ipykernel>=7.1.0",
    "langgraph>=1.0.8",
    "mcp[cli]>=1.25.0",
    "openai>=2.15.0",
    "openai-agents>=0.7.0",
    "pydantic>=2.12.5",
    "pypdf>=6.6.0",
    "requests>=2.32.5",
    "sendgrid>=6.12.5",
    "tensorflow>=2.20.0",
    "typing>=3.10.0.0",
]
